--- a/Forms/views/entities.html
+++ b/Forms/views/entities.html
@@ -2,7 +2,7 @@
     <div class="panel-heading">
         <div class="row">
             <div class="col-sm-7">
-                <h4>Entities</h4>
+                <h4 class="text-info">Entities</h4>
             </div>
             <div class="col-sm-5">
                 <input type="text" class="form-control" ng-model="Search" placeholder="Search&hellip;" />
@@ -11,8 +11,13 @@
     </div>
     <div class="list-group">
         <a href="#/entity" class="list-group-item">
-            <span class="text-info"><i>New Entity&hellip;</i></span>
+            <span class="text-info">
+                <i class="fa fa-plus-circle"></i>
+                New Entity&hellip;
+            </span>
         </a>
-        <a href="#/entity/{{Entity.Id}}" class="list-group-item" ng-repeat="Entity in Entities | filter : {Name: Search}">{{Entity.Name}}</a>
+        <a href="#/entity/{{Entity.Id}}" class="list-group-item" ng-repeat="Entity in Entities | filter : {Name: Search}">
+            <h4 class="list-group-item-heading">{{Entity.Name}}</h4>
+        </a>
     </div>
 </div>
