--- a/Forms/views/entity.html
+++ b/Forms/views/entity.html
@@ -1,7 +1,7 @@
 ﻿<form class="form-horizontal">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h4>{{Entity.Name || 'New Entity'}}</h4>
+            <h4 class="text-info">{{Entity.Name || 'New Entity'}}</h4>
         </div>
         <div class="panel-body">
             <div class="form-group">
@@ -24,10 +24,6 @@
         <div class="panel-footer">
             <div class="clearfix">
                 <div class="pull-right">
-                    <a href="#/entities" class="btn btn-default">
-                        <i class="fa fa-chevron-left"></i>
-                        Back
-                    </a>
                     <button class="btn btn-primary" ng-click="Save()">
                         <i class="fa fa-save"></i>
                         Save
