--- a/Forms/views/entity.html
+++ b/Forms/views/entity.html
@@ -1,36 +1,38 @@
-﻿<form class="form-horizontal">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h4 class="text-info">{{Entity.Name || 'New Entity'}}</h4>
-        </div>
-        <div class="panel-body">
-            <div class="form-group">
-                <label for="Name" class="control-label col-sm-3">Name</label>
-                <div class="col-sm-9">
-                    <input type="text" class="form-control" ng-model="Entity.Name" />
+﻿<pah>
+    <form class="form-horizontal">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="text-info">{{Entity.Name || 'New Entity'}}</h4>
+            </div>
+            <div class="panel-body">
+                <div class="form-group">
+                    <label for="Name" class="control-label col-sm-3">Name</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" ng-model="Entity.Name" />
+                    </div>
+                </div>
+                <div class="form-group" ng-repeat="Type in Entity.Types">
+                    <div class="col-sm-9 col-sm-offset-3">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" ng-model="Type.Active" ng-true-value="'1'" ng-false-value="'0'" />
+                                {{Type.Description}}
+                            </label>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="form-group" ng-repeat="Type in Entity.Types">
-                <div class="col-sm-9 col-sm-offset-3">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" ng-model="Type.Active" ng-true-value="'1'" ng-false-value="'0'" />
-                            {{Type.Description}}
-                        </label>
+            <div class="panel-footer">
+                <div class="clearfix">
+                    <div class="pull-right">
+                        <button class="btn btn-primary" ng-click="Save()">
+                            <i class="fa fa-save"></i>
+                            Save
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="panel-footer">
-            <div class="clearfix">
-                <div class="pull-right">
-                    <button class="btn btn-primary" ng-click="Save()">
-                        <i class="fa fa-save"></i>
-                        Save
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-</form>
-<pre>{{Entity}}</pre>
+    </form>
+    <pre>{{pahData}}</pre>
+</pah>
