--- a/Forms/views/entities.html
+++ b/Forms/views/entities.html
@@ -1,10 +1,10 @@
-﻿<pah>
-    <pah-dataset name="Entities" source="pr_Entities"></pah-dataset>
+﻿<mg-data>
+    <mg-object name="Entities" source="pr_Entities"></mg-object>
     <div class="panel panel-default">
         <div class="panel-heading">
             <div class="row">
                 <div class="col-sm-7">
-                    <h4 class="text-info">Entities</h4>
+                    <h4>Entities</h4>
                 </div>
                 <div class="col-sm-5">
                     <input type="text" class="form-control" ng-model="Search" placeholder="Search&hellip;" />
@@ -13,15 +13,16 @@
         </div>
         <div class="list-group">
             <a href="#/entity" class="list-group-item">
-                <span class="text-info">
+                <p class="list-group-item-text text-info">
                     <i class="fa fa-plus-circle"></i>
                     New Entity&hellip;
-                </span>
+                </p>
             </a>
-            <a href="#/entity/{{Entity.Id}}" class="list-group-item" ng-repeat="Entity in Dataset('Entities') | filter : {Name: Search}">
+            <a href="#/entity/{{Entity.Id}}" class="list-group-item" ng-repeat="Entity in Entities | filter : Search">
                 <h4 class="list-group-item-heading">{{Entity.Name}}</h4>
                 <p class="list-group-item-text">{{Entity.Country}}</p>
             </a>
         </div>
     </div>
-</pah>
+</mg-data>
+
