--- a/Forms/views/entities.html
+++ b/Forms/views/entities.html
@@ -1,5 +1,5 @@
-﻿<mg-data>
-    <mg-object name="Entities" source="pr_Entities"></mg-object>
+﻿<mg-controller>
+    <mg-proc name="Entities" source="pr_Entities" autoexec="true"></mg-proc>
     <div class="panel panel-default">
         <div class="panel-heading">
             <div class="row">
@@ -24,5 +24,5 @@
             </a>
         </div>
     </div>
-</mg-data>
+</mg-controller>
 
