--- a/Forms/views/entities.html
+++ b/Forms/views/entities.html
@@ -1,5 +1,5 @@
 ﻿<mg-controller>
-    <mg-proc name="Entities" source="pr_Entities" autoexec="true"></mg-proc>
+    <mg-proc name="apiEntities" ng-model="Entities" autoexec="true"></mg-proc>
     <div class="panel panel-default">
         <div class="panel-heading">
             <div class="row">
@@ -25,4 +25,5 @@
         </div>
     </div>
 </mg-controller>
+
 
